<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_calcular_estanteria_carga"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"

        tools:context="com.example.andres.formacajas.CalcularEstanteriaCarga">

        <!-- ========================================================
        ================= Selección de Estructura  ==================
        ========================================================= -->

        <!-- Titulo -->

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_carga"
            android:textSize="@dimen/size_titulos_secciones_variable"></TextView>

        <!-- Ingreso Altura -->

        <TextView
            android:id="@+id/textoAltura"
            android:layout_width="@dimen/size_text_layout_variable"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titulo"
            android:layout_marginTop="16dp"
            android:text="@string/string_line_1"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/menosAltura"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/titulo"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/textoAltura"
            android:padding="0dp"
            android:text="@string/string_boton_menos"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <TextView
            android:id="@+id/textoAlturaSelec"
            android:layout_width="@dimen/size_value_layout_variable_carga"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titulo"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/menosAltura"
            android:text="@string/default_altura_carga"
            android:textAlignment="center"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/masAltura"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/titulo"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/textoAlturaSelec"
            android:padding="0dp"
            android:text="@string/string_boton_mas"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <!-- Ingreso Cuerpos -->

        <TextView
            android:id="@+id/textoCuerpos"
            android:layout_width="@dimen/size_text_layout_variable"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoAltura"
            android:text="@string/string_line_2"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/menosCuerpos"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoAltura"
            android:layout_toRightOf="@+id/textoCuerpos"
            android:padding="0dp"
            android:text="@string/string_boton_menos"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <TextView
            android:id="@+id/textoCuerposSelec"
            android:layout_width="@dimen/size_value_layout_variable_carga"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoAltura"
            android:layout_toRightOf="@+id/menosCuerpos"
            android:text="@string/default_cuerpos_carga"
            android:textAlignment="center"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/masCuerpos"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoAltura"
            android:layout_toRightOf="@+id/textoCuerposSelec"
            android:padding="0dp"
            android:text="@string/string_boton_mas"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <!-- Ingreso Niveles -->

        <TextView
            android:id="@+id/textoNiveles"
            android:layout_width="@dimen/size_text_layout_variable"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoCuerpos"
            android:text="@string/niveles"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/menosNiveles"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoCuerpos"
            android:layout_toRightOf="@+id/textoNiveles"
            android:padding="0dp"
            android:text="@string/string_boton_menos"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <TextView
            android:id="@+id/textoNivelesSelec"
            android:layout_width="@dimen/size_value_layout_variable_carga"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoCuerpos"
            android:layout_toRightOf="@+id/menosNiveles"
            android:text="@string/default_niveles_carga"
            android:textAlignment="center"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/masNiveles"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoCuerpos"
            android:layout_toRightOf="@+id/textoNivelesSelec"
            android:padding="0dp"
            android:text="@string/string_boton_mas"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <!-- Ingreso Cuadro-->

        <TextView
            android:id="@+id/textoCuadro"
            android:layout_width="@dimen/size_text_layout_variable"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoNiveles"
            android:text="@string/cuadro"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/menosCuadro"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoNiveles"
            android:layout_toRightOf="@+id/textoCuadro"
            android:padding="0dp"
            android:text="@string/string_boton_menos"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <TextView
            android:id="@+id/textoCuadroSelec"
            android:layout_width="@dimen/size_value_layout_variable_carga"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoNiveles"
            android:layout_toRightOf="@+id/menosCuadro"
            android:text="@string/default_cuadro_carga"
            android:textAlignment="center"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/masCuadro"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoNiveles"
            android:layout_toRightOf="@+id/textoCuadroSelec"
            android:padding="0dp"
            android:text="@string/string_boton_mas"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <!-- Ingreso Módulos -->

        <TextView
            android:id="@+id/textoModulos"
            android:layout_width="@dimen/size_text_layout_variable"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoCuadro"
            android:text="@string/string_line_5"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/menosModulos"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoCuadro"
            android:layout_toRightOf="@+id/textoModulos"
            android:padding="0dp"
            android:text="@string/string_boton_menos"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <TextView
            android:id="@+id/textoModulosSelec"
            android:layout_width="@dimen/size_value_layout_variable_carga"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoCuadro"
            android:layout_toRightOf="@+id/menosModulos"
            android:text="@string/default_modulos_carga"
            android:textAlignment="center"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/masModulos"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoCuadro"
            android:layout_toRightOf="@+id/textoModulosSelec"
            android:padding="0dp"
            android:text="@string/string_boton_mas"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <!-- Ingreso Fondo -->

        <TextView
            android:id="@+id/textoFondo"
            android:layout_width="@dimen/size_text_layout_variable"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoModulos"
            android:text="@string/fondo"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/menosFondo"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoModulos"
            android:layout_toRightOf="@+id/textoFondo"
            android:padding="0dp"
            android:text="@string/string_boton_menos"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <TextView
            android:id="@+id/textoFondoSelec"
            android:layout_width="@dimen/size_value_layout_variable_carga"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoModulos"
            android:layout_toRightOf="@+id/menosFondo"
            android:text="@string/default_fondo_carga"
            android:textAlignment="center"
            android:textSize="@dimen/size_text_variable"></TextView>

        <Button
            android:id="@+id/masFondo"
            android:layout_width="@dimen/size_button_variable"
            android:layout_height="@dimen/size_button_variable"
            android:layout_below="@+id/textoModulos"
            android:layout_toRightOf="@+id/textoFondoSelec"
            android:padding="0dp"
            android:text="@string/string_boton_mas"
            android:textSize="@dimen/size_text_button_variable"></Button>

        <!-- ========================================================
        ================== Seleccion de Checkboxes  =================
        ========================================================= -->

        <!-- Acero Inoxidable -->

        <CheckBox
            android:id="@+id/checkBoxAceroInoxidable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoFondo"
            android:layout_marginTop="16dp"
            android:text="@string/check_box_acero_inoxidable"
            android:textSize="@dimen/size_text_variable" />

        <!-- ========================================================
        ================== Seleccion de Resultados  =================
        ========================================================= -->

        <!-- Boton Calcular -->

        <Button
            android:id="@+id/calcularEstCanastillas"
            android:layout_width="@dimen/size_button_calcular_variable"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBoxAceroInoxidable"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/string_boton_calcular__est_canastillas"
            android:textAllCaps="false"
            android:textSize="@dimen/size_text_variable"></Button>

        <!-- Resultado del calculo -->

        <TextView
            android:id="@+id/textoResultado"
            android:layout_width="@dimen/size_text_resultado_layout_variable"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calcularEstCanastillas"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/default_resultado"
            android:textAlignment="center"
            android:textSize="@dimen/size_text_resultado_variable"></TextView>

    </RelativeLayout>

</ScrollView>